--- a/.github/workflows/release-dotnet.yaml
+++ b/.github/workflows/release-dotnet.yaml
@@ -71,7 +71,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: "${{ steps.release.outputs.module }}-v${{ steps.release.outputs.version }}"
-        release_name: Release "${{ steps.release.outputs.module }}-v${{ steps.release.outputs.version }}"
+        release_name: "Release: ${{ steps.release.outputs.module }}-v${{ steps.release.outputs.version }}"
         draft: false
         prerelease: false
 
